--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Matthew Van Der Westhuizen</a>
+          <div class="navbar-brand">Matthew Van Der Westhuizen</div>
           <button
             class="navbar-toggler"
             type="button"
@@ -63,12 +63,71 @@
           </div>
         </div>
       </nav>
-      <div id="Matt">
-        <h1>Hello World</h1>
-        <p>My name is Matthew</p>
+      <div>
+        <div class="row">
+          <div class="col-12"><h1>Hello World</h1></div>
+        </div>
+        <div class="row">
+          <div><p>My name is Matthew</p></div>
+        </div>
+        <div class="row">
+          <div>
+            <button
+              type="button"
+              class="btn btn-secondary m-2"
+              onclick="changeColorRed()"
+            >
+              Red
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <button
+              type="button"
+              class="btn btn-secondary m-2"
+              onclick="changeColorBlue()"
+            >
+              Blue
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <button
+              type="button"
+              class="btn btn-secondary m-2"
+              onclick="changeColorGreen()"
+            >
+              Green
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <button
+              type="button"
+              class="btn btn-secondary m-2"
+              onclick="changeColorWhite()"
+            >
+              White
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <button
+              type="button"
+              class="btn btn-secondary m-2"
+              onclick="changeColorPink()"
+            >
+              Pink
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-    <script src="script.js" async defer></script>
+    <script src="script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
