--- a/index.html
+++ b/index.html
@@ -16,116 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <div class="navbar-brand">Matthew Van Der Westhuizen</div>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <div>
-        <div class="row">
-          <div class="col-12"><h1>Hello World</h1></div>
-        </div>
-        <div class="row">
-          <div><p>My name is Matthew</p></div>
-        </div>
-        <div class="row">
-          <div>
-            <button
-              type="button"
-              class="btn btn-secondary m-2"
-              onclick="changeColorRed()"
-            >
-              Red
-            </button>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <button
-              type="button"
-              class="btn btn-secondary m-2"
-              onclick="changeColorBlue()"
-            >
-              Blue
-            </button>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <button
-              type="button"
-              class="btn btn-secondary m-2"
-              onclick="changeColorGreen()"
-            >
-              Green
-            </button>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <button
-              type="button"
-              class="btn btn-secondary m-2"
-              onclick="changeColorWhite()"
-            >
-              White
-            </button>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <button
-              type="button"
-              class="btn btn-secondary m-2"
-              onclick="changeColorPink()"
-            >
-              Pink
-            </button>
-          </div>
-        </div>
-      </div>
+      <h1>Welcome to my store</h1>
     </div>
     <script src="script.js"></script>
     <script
